tests/errors/macro/parser_string_not_ended/string_not_ended.c
int main()
{
	char str[10] = "hjkl;
	return 0;
}